fixed performance issues on mobiles

--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -25,7 +25,9 @@
     max-height: 75vh;
     width: 100%;
     background-color: rgb(121, 121, 121);
-    transition: all .6s ease-in-out;
+    transition-property: transform, opacity, filter, z-index;
+    transition-duration: .6s;
+    transition-timing-function: ease-in-out;
     padding: 1rem;
     border-radius: .75rem;
     will-change: transform, opacity, filter;
@@ -34,38 +36,36 @@
 .current{
     z-index: 7;
     opacity: 1;
-    -webkit-box-shadow: 2px 8px 23px -6px rgba(39, 39, 47, 1);
+    /* -webkit-box-shadow: 2px 8px 23px -6px rgba(39, 39, 47, 1);
 -moz-box-shadow: 2px 8px 23px -6px rgba(39, 39, 47, 1);
-box-shadow: 2px 8px 23px -6px rgba(39, 39, 47, 1);
+box-shadow: 2px 8px 23px -6px rgba(39, 39, 47, 1); */
 }
 
 .next{
     opacity: .8;
-    /* z-index: 6; */
+    z-index: 6;
     -webkit-transform: translate(50%, 3%) rotate(5deg) scale(.8);
             transform: translate(50%, 3%) rotate(5deg) scale(.8);
-    -webkit-filter: blur(5px);
-            filter: blur(5px);
+    /* -webkit-filter: blur(5px);
+            filter: blur(5px); */
 }
 
 .prev{
     opacity: .5;
-    /* z-index: 5; */
+    z-index: 6;
             transform: translate(-50%, 3%) rotate(-7deg) scale(.8);
     -webkit-transform: translate(-50%, 3%) rotate(-7deg) scale(.8);
-    filter: blur(5px);
-    -webkit-filter: blur(5px);
+    /* filter: blur(5px);
+    -webkit-filter: blur(5px); */
 }
 
 .hidden{
-    /* z-index: 4; */
     opacity: 0;
             transform: translate(90%, 3%) rotate(5deg) scale(.6);
     -webkit-transform: translate(90%, 3%) rotate(5deg) scale(.6);
 }
 
 .hidden-after{  
-    /* z-index: 3; */
     opacity: 0;
     -webkit-transform: translateX(-90%) rotate(-8deg) scale(.6);
             transform: translateX(-90%) rotate(-8deg) scale(.6);
